Added gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,1 @@
-Identification/staged_data/downscaling/downscaled_hdf5/
-Identification/staged_data/downscaling/experimental_hdf5_scans/
-stardist-env/
+DataOutput/
